# rust-libzfs

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  README.md  bors.toml  build-disable.rs  generate-bindings  wrapper.h
.github/workflows/: check.yml  ci.yml  codecov.yml  coverage.yml  coveralls.yml  mac.yml  test.yml
libzfs-core/: Cargo.toml
libzfs-core-sys/: Cargo.toml  build.rs  generate-bindings
libzfs-core-sys/src/: bindings.rs  lib.rs
libzfs-core/src/: lib.rs
libzfs-core/tests/: basic.rs
nvpair/: Cargo.toml
nvpair-sys/: Cargo.toml  build.rs  generate-bindings  wrapper.h
nvpair-sys/src/: bindings.rs  lib.rs
nvpair/src/: de.rs  error.rs  lib.rs  ser.rs
nvpair/tests/: nvpair.rs
systest/: Cargo.toml  build.rs
systest/src/: main.rs
zfs-core/: Cargo.toml  test-prepare
zfs-core-sys/: Cargo.toml  build.rs  generate-bindings  generate-bindings-isolate  wrapper.h
zfs-core-sys/src/: bindings.rs  lib.rs
zfs-core/examples/: send-small-snap.rs  sync-hang.rs
zfs-core/src/: lib.rs
zfs-core/tests/: basic.rs
zfs-ctrl/: Cargo.toml
zfs-ctrl/src/: lib.rs  zpool.rs
zfs-ctrl/tests/: zfs.rs  zpool.rs
zfs-drr/: Cargo.toml
zfs-drr/src/: lib.rs
