[package]
name = "nvpair-sys"
version = "0.1.0"
edition = "2018"
authors = ["Cody P Schafer <dev@codyps.com>"]
include = ["**/*.rs", "Cargo.toml"]
description = "Bindings to libnvpair.so (nvpair & nvlist)"
documentation = "https://docs.rs/nvpair-sys"
repository = "https://github.com/jmesmon/rust-libzfs"
license = "Apache-2.0 OR MIT"

links = "nvpair"

[dependencies]

[badges]
travis-ci = { repository = "jmesmon/rust-libzfs" }
