[package]
name = "nvpair"
version = "0.2.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
include = ["**/*.rs", "Cargo.toml"]
documentation = "https://docs.rs/nvpair"
repository = "https://github.com/jmesmon/rust-libzfs"
description = "Work with nvlist and nvpair (using nvpair-sys, libnvpair.so)"
license = "Apache-2.0 OR MIT"

[dependencies]
cstr-argument = "0.0"
nvpair-sys = { path = "../nvpair-sys", version = "0.1" }
foreign-types = "0.3"
