[package]
name = "nvpair"
version = "0.4.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
include = ["**/*.rs", "Cargo.toml"]
documentation = "https://docs.rs/nvpair"
repository = "https://github.com/jmesmon/rust-libzfs"
description = "Work with nvlist and nvpair (using nvpair-sys, libnvpair.so)"
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
cstr-argument = "0.1"
nvpair-sys = { path = "../nvpair-sys", version = "0.4.0" }
foreign-types = "0.5.0"

[badges]
travis-ci = { repository = "jmesmon/rust-libzfs" }
