[package]
name = "zfs-core-sys"
version = "0.1.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
include = ["**/*.rs", "Cargo.toml"]
documentation = "https://docs.rs/zfs-core-sys"
repository = "https://github.com/jmesmon/rust-libzfs"
description = "Bindings to libzfs_core (lzc)"
license = "Apache-2.0 OR MIT"

[build-dependencies]
pkg-config = "0.3"
#bindgen = "0.30"

[dependencies]
libc = "0.2"
nvpair-sys = { path = "../nvpair-sys", version = "0.1" }

[badges]
travis-ci = { repository = "jmesmon/rust-libzfs" }
