[package]
name = "zfs-core-sys"
version = "0.5.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
include = ["**/*.rs", "Cargo.toml"]
documentation = "https://docs.rs/zfs-core-sys"
repository = "https://github.com/jmesmon/rust-libzfs"
description = "Bindings to libzfs_core (lzc)"
license = "Apache-2.0 OR MIT"
edition = "2018"

[build-dependencies]
pkg-config = "0.3"
build-env = "0.3"

[dependencies]
libc = "0.2"
nvpair-sys = { path = "../nvpair-sys", version = "0.4" }
