[package]
name = "zfs-core"
version = "0.2.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
include = ["**/*.rs", "Cargo.toml"]
documentation = "https://docs.rs/zfs-core"
repository = "https://github.com/jmesmon/rust-libzfs"
description = "Rust interface to libzfs_core (lzc)"
license = "Apache-2.0 OR MIT"

[dependencies]
nvpair = { path = "../nvpair", version = "0.3" }
zfs-core-sys = { path = "../zfs-core-sys", version = "0.1" }
cstr-argument = "0.1"
foreign-types = "0.5.0"

[badges]
travis-ci = { repository = "jmesmon/rust-libzfs" }
