[package]
name = "zfs-core"
version = "0.5.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
include = ["**/*.rs", "Cargo.toml"]
documentation = "https://docs.rs/zfs-core"
repository = "https://github.com/jmesmon/rust-libzfs"
description = "Rust interface to libzfs_core (lzc)"
license = "Apache-2.0 OR MIT"
edition = "2018"

[features]
v2_00 = []

[dependencies]
nvpair = { path = "../nvpair", version = "0.5.0" }
zfs-core-sys = { path = "../zfs-core-sys", version = "0.5.0" }
cstr-argument = "0.1"
foreign-types = "0.5.0"
rand = "0.8.1"
snafu = "0.6"

[dev-dependencies]
os_pipe = "0.9"
tempfile = "3"
libc = "0.2"
